--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm --version
       - run: node --version
-      - run: ls node_modules
-      - run: cat /home/runner/.npm/_logs/2023-08-10T18_49_29_903Z-debug.log
+      - run: ls ./node_modules
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
