--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,6 @@ jobs:
       - run: node --version
       - run: ls ./node_modules
       - run: npm ci
+        timeout-minutes: 10
       - run: npm run build --if-present
       - run: npm test
