--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm --version
       - run: node --version
-      - run: ls node_modules/
+      - run: ls ../node_modules/
       - run: npm ci
         timeout-minutes: 10
       - run: npm run build --if-present
