--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,15 +16,24 @@ jobs:
         node-version: [14.x, 16.x, 18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm --version
-      - run: node --version
-      - run: ls node_modules/
-      - run: npm ci
-        timeout-minutes: 10
-      - run: npm run build --if-present
-      - run: npm test
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run ls on node_modules
+        run: ls node_modules/
