--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackathon",
+  "name": "DIAPREDICT",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chart.js": "^2.9.41",
+    "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
